Archive2/b6/d7a517870691a2/output
main.cpp: In function 'int main()':
main.cpp:16:5: error: 'string' was not declared in this scope
     string s;
     ^
main.cpp:16:5: note: suggested alternative:
In file included from /usr/local/include/c++/4.9.2/string:39:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/bits/stringfwd.h:62:33: note:   'std::string'
   typedef basic_string<char>    string;   
                                 ^
main.cpp:18:17: error: 's' was not declared in this scope
     scanf("%s",&s);
                 ^
